# paho.mqtt.c-release

./: 0001-Build-with-ssl.patch  0001-Change-defaults-as-flags-don-t-get-picked-up.patch  0002-Install-package.xml.patch  0002-Simply-change-the-defaults.patch  0002-Skip-test-by-overriding-function.patch  0003-Disable-testing-as-it-depends-on-network-connections.patch  0003-Simply-change-the-defaults.patch  0004-Syntax-error.patch  0005-They-are-C-flags-for-the-c-package.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
noetic/: package.xml
patches/: package.xml
rpm/: ros-galactic-paho-mqtt-c.spec  ros-noetic-paho-mqtt-c.spec  template.spec
